--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,13 @@
 {
-  "configurations": [
-    {
-      "name": "C/C++: g++ 활성 파일 빌드 및 디버그",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${fileDirname}/${fileBasenameNoExtension}",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${fileDirname}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "lldb",
-      "preLaunchTask": "C/C++: g++ 활성 파일 빌드"
-    }
-  ],
-  "version": "2.0.0"
+	"configurations": [
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "Lldb debug",
+			"program": "${fileDirname}/${fileBasenameNoExtension}",
+			"args": [],
+			"cwd": "${workspaceFolder}"
+		}
+	],
+	"version": "2.0.0"
 }
