--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,19 @@
 			"program": "${fileDirname}/${fileBasenameNoExtension}",
 			"args": [],
 			"cwd": "${workspaceFolder}"
+		},
+		{
+			"name": "C/C++: cpp 활성 파일 빌드 및 디버그",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${fileDirname}/${fileBasenameNoExtension}",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "lldb",
+			"preLaunchTask": "C/C++: cpp 활성 파일 빌드"
 		}
 	],
 	"version": "2.0.0"
